--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  modal_side_sheet: ^0.0.1
   intl: ^0.19.0
   conditional_builder_null_safety: ^0.0.6
   bloc: ^8.1.2
