--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   syncfusion_flutter_charts: ^25.1.38
   sidebarx: ^0.16.3
+  number_paginator: ^0.4.1
 
 
 dev_dependencies:
